Improve EKF-SLAM homework

--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -18,6 +18,7 @@
 \usepackage{booktabs} % \toprule \midrule \bottomrule
 \usepackage[backend=biber]{biblatex} % set biber to format references. Must configure Biber in Texstudio
 \usepackage{csquotes} % to remove warning triggered by biblatex and babel
+\usepackage{algorithm} % to put captions to the algorithmics environmets
 \usepackage{algpseudocode} % to write algorithm
 \usepackage{tikz} % to use tikz
 \usepackage[export]{adjustbox} %valign in subfloat
