--- a/tps/tp6_ekf_slam_rrt/tp.tex
+++ b/tps/tp6_ekf_slam_rrt/tp.tex
@@ -6,11 +6,17 @@
 % add math preamble
 \input{../../common/math_preamble}
 
+% add bibliography resource
+\renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
+\bibliography{../../common/bibliography.bib}
+
 \codigo{R-521}
 \materia{Robótica Móvil}
 \title{CSE 571 - Robotics \\ Homework 2 - EKF and RRT}
 \author{}
 \date{}
+
+\usepackage{biblatex}
 
 \begin{document}
 
@@ -79,16 +85,10 @@ Assume there is a landmark $m$ at location $(x_{m},y_{m})$. The robot receives t
 Derive Jacobian matrix $H_{s}$, derivative of the measurements with respect to the robot state $s_{t}=[x_{t},y_{t},\theta_{t}]$ and the Jacobian matrix $H_{m}$, derivative of the measurements with respect to the landmark position $(x_{m},y_{m})$.
 
 \subsection{EKF Localization and Mapping [40 points]}
-In the programming component of this assignment, you will first implement an Extended Kalman Filter (EKF) (Fig. \ref{fig:ekf}) to localize a robot based on landmarks. Then, you will add landmarks to the state and build a map while localizing the robot, thus performing simultaneous localization and mapping (SLAM).
-
-% \begin{figure}[h]
-%     \centering
-%     \includegraphics[width=0.6\textwidth]{ekf.png}
-%     \caption{Extended Kalman Filter}
-%     \label{fig:ekf}
-% \end{figure}
+In the programming component of this assignment, you will first implement an Extended Kalman Filter (EKF) (Algorithm~\ref{alg:ekf}) to localize a robot based on landmarks. Then, you will add landmarks to the state and build a map while localizing the robot, thus performing simultaneous localization and mapping (SLAM).
 
 \begin{algorithm}\captionsetup{labelfont={sc,bf}, labelsep=newline}
+    \label{alg:ekf}
     \caption{Extended Kalman Filter}
     \begin{algorithmic}[1]
         \Procedure{ExtendedKalmanFilter}{$\mu_{t-1}, \covariance_{t-1}, \controlCommand_{t}, \observation_{t}$}
@@ -147,7 +147,7 @@ $ python localization.py -h
 \subsection*{Task}
 \begin{enumerate}
     \item Fill in the Jacobian matrices G, V, R and H in \texttt{ekf\_slam.py} using your derivation in 1.1.
-    \item Implement the EKF update (Fig. \ref{fig:ekf}) in \texttt{ExtendedKalmanFilterSLAM.update} in \texttt{ekf\_slam.py}. Make sure to keep track of the set of landmark IDs that the robot has observed.
+    \item Implement the EKF update (Algorithm~\ref{alg:ekf}) in \texttt{ExtendedKalmanFilterSLAM.update} in \texttt{ekf\_slam.py}. Make sure to keep track of the set of landmark IDs that the robot has observed.
 \end{enumerate}
 
 Answer the following questions in your writeup:
@@ -229,9 +229,6 @@ Check out these useful functions that you should use to simplify your implementa
 \section{Submission}
 We will be using the Canvas for submission of the assignments. Please submit the written assignment answers as a PDF. For the code, submit a zip file of the entire working directory.
 
-\begin{thebibliography}{9}
-\bibitem{thrun2005probabilistic}
-Thrun, Burgard and Fox (2005), \textit{Probabilistic Robotics}.
-\end{thebibliography}
+\printbibliography
 
 \end{document}
