--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -39,6 +39,9 @@
 
 	\section{Factor-Graph}
 	\input{src/graph_slam.tex}
+
+	\section{GTSAM}
+	\input{src/gtsam.tex}
     
     \section{Bundle Adjustment}
     \input{src/bundle_adjustment.tex}
