--- a/tps/tp5_factor_graph/tp5.tex
+++ b/tps/tp5_factor_graph/tp5.tex
@@ -23,7 +23,7 @@
 
 
 \section{Disclaimer}
-this homework is based on the Homework 7 -- SLAM of the NA 568 Mobile Robotics: Methods \& Algorithms \\ Winter 2022 created by Maani Ghaffari \\ University of Michigan
+this homework is based on the Homework 7 -- SLAM of the NA 568 Mobile Robotics: Methods \& Algorithms -- Winter 2022 created by Maani Ghaffari -- University of Michigan
 %\title{NA 568 Mobile Robotics: Methods \& Algorithms \\ Winter 2022 -- Homework 7 -- SLAM}
 %\author{Maani Ghaffari \\ University of Michigan}
 %\date{March 19, 2022}
@@ -32,12 +32,12 @@ this homework is based on the Homework 7 -- SLAM of the NA 568 Mobile Robotics: 
 
 \begin{enumerate}
     \item A .tar.gz or .zip file containing a directory named after your uniqname with the structure shown below. \\
-    \texttt{alincoln\_hw7.zip:} \\
-    \texttt{alincoln\_hw7/} \\
-    \texttt{alincoln\_hw7/YOUR\_WORKING\_CODE} \\
+    \lstinline[style=bash]{alincoln\_hw7.zip:} \\
+    \lstinline[style=bash]{alincoln\_hw7/} \\
+    \lstinline[style=bash]{alincoln\_hw7/YOUR\_WORKING\_CODE} \\
     You may use C++, Python, or MATLAB for your programming.
 
-    \item A PDF with the written portion of your write-up. Scanned versions of hand-written documents, converted to PDFs, are perfectly acceptable. No other formats (e.g., doc) are acceptable. Your PDF file should adhere to the following naming convention: \texttt{alincoln\_hw7.pdf}.
+    \item A PDF with the written portion of your write-up. Scanned versions of hand-written documents, converted to PDFs, are perfectly acceptable. No other formats (e.g., doc) are acceptable. Your PDF file should adhere to the following naming convention: \lstinline[style=bash]{alincoln\_hw7.pdf}.
 
     \item Submit your complete source code. We will compile and run your code for evaluation.
 \end{enumerate}
@@ -63,10 +63,10 @@ The first step is to clone and install GTSAM library. Detailed instruction can b
 
 \begin{itemize}
     \item Go to this repository and click the green clone or download button on the right hand side to clone the repository to your machine.
-    \item In the terminal, enter command (this will allow you to navigate to the repository) \texttt{cd <path\_to\_your\_repository>}
-    \item Then create a new folder named build by \texttt{mkdir build}
-    \item Navigate into the build folder \texttt{cd build}
-    \item run cmake to create essential links for building files (\textbf{Note}: if you want to use the python wrapper, you will have to do something different here. Please jump to the python wrapper section) \texttt{cmake ..}
+    \item In the terminal, enter command (this will allow you to navigate to the repository) \lstinline[style=bash]{cd <path\_to\_your\_repository>}
+    \item Then create a new folder named build by \lstinline[style=bash]{mkdir build}
+    \item Navigate into the build folder \lstinline[style=bash]{cd build}
+    \item run cmake to create essential links for building files (\textbf{Note}: if you want to use the python wrapper, you will have to do something different here. Please jump to the python wrapper section) \lstinline[style=bash]{cmake ..}
 \end{itemize}
 
 \textbf{Remark 4.} \textit{If you have error saying could not find Boost, you may try manually install boost following this tutorial and make sure you are pointing to the correct directory by adding following commands in CMakeList.txt :}
@@ -80,8 +80,8 @@ set (Boost_NO_BOOST_CHAKE ON)
 \end{verbatim}
 
 \begin{itemize}
-    \item make the file to the build folder (The command -j10 indicates the number of threads to be used during make. It'll make the compilation faster. I recommend using your max number of cores - 2, otherwise your machine may get stuck. I have 12 threads on my machine, so I use -j10.) \texttt{make -j10}
-    \item install the gtsam library to your machine. \texttt{sudo make install -j10}
+    \item make the file to the build folder (The command -j10 indicates the number of threads to be used during make. It'll make the compilation faster. I recommend using your max number of cores - 2, otherwise your machine may get stuck. I have 12 threads on my machine, so I use -j10.) \lstinline[style=bash]{make -j10}
+    \item install the gtsam library to your machine. \lstinline[style=bash]{sudo make install -j10}
     \item At this step, you will be able to see the path where all the packages are installing to. If later you somehow cannot link the install path to your code, you can come back to this step and see where it is installed to.
 \end{itemize}
 
@@ -100,8 +100,8 @@ You may refer to some c++ gtsam examples here.
 If you have a newer Ubuntu system (later than 10.04), you must make a small modification to your MATLAB installation, due to MATLAB being distributed with an old version of the C++ standard library. Delete or rename all files starting with libstdc++ in your MATLAB installation directory, in paths:
 
 \begin{itemize}
-    \item \texttt{/usr/local/MATLAB/\{version\}/sys/os/\{system\}}
-    \item \texttt{/usr/local/MATLAB/\{version\}/bin/\{system\}}
+    \item \lstinline[style=bash]|/usr/local/MATLAB/{version}/sys/os/{system}|
+    \item \lstinline[style=bash]|/usr/local/MATLAB/{version}/bin/{system}|
 \end{itemize}
 
 For MATLAB wrapper, you can do it in two ways:
@@ -116,7 +116,7 @@ We recommend using the pre-compiled wrapper if you are not familiar with linux s
 \begin{itemize}
     \item Download the pre-compiled wrapper here. Download precompiled MATLAB toolbox (Works with MATLAB R2011a and later) depends on your system OS (Mac OS 64-bit / Linux 64-bit / Windows 64-bit).
     \item Extract the folder. (Note: for linux system, after extracting, you'll have to right click on the extracted file → Open With → Archive Mounter. Your will then see a gtsam-toolbox-3.2.0-lin64 on your left side along with Computer, OS... The folder inside named gtsam\_toolbox is the folder we want to use.)
-    \item Put the gtsam\_toolbox folder under \texttt{<YOUR\_MATLAB\_INSTALL\_PATH>/toolbox/}
+    \item Put the gtsam\_toolbox folder under \lstinline[style=bash]{<YOUR\_MATLAB\_INSTALL\_PATH>/toolbox/}
     \item Every time you open your MATLAB, at the left side of your GUI, navigate to your gtsam\_toolbox → right click → add to path → selected folder. Then you should be able to run the example codes under the example folder. Or you can add the following commends as your first part of code.
     \begin{verbatim}
     addpath('<your_gtsam_toolbox_path>')
@@ -124,41 +124,40 @@ We recommend using the pre-compiled wrapper if you are not familiar with linux s
     \end{verbatim}
 \end{itemize}
 
-You may refer to some matlab gtsam examples in \texttt{gtsam\_toolbox/gtsam\_examples} folder.
+You may refer to some matlab gtsam examples in \lstinline[style=bash]{gtsam\_toolbox/gtsam\_examples} folder.
 
 \subsubsection{Python Wrapper}
 
-Install Anaconda 
+Install Anaconda
+
+\begin{lstlisting}[style=bash] 
 conda create -n gtsam_env python=<your\_python\_version>
 conda activate gtsam_env
+conda install -c conda-forge cmake eigen pybind11 boost numpy matplotlib python-graphviz conda-forge::plotly conda-forge::pandas conda-forge::nbformat
 
-conda install -c conda-forge cmake eigen pybind11 boost numpy
+\end{lstlisting}
 
+\begin{lstlisting}[style=bash] 
 git clone https://github.com/borglab/gtsam.git
 cd gtsam
-
-conda install -r <gtsam\_folder>/python/requirements.txt
-
 mkdir build && cd build
-
-cmake .. \
-  -DGTSAM_BUILD_PYTHON=1 \
-  -DGTSAM_PYTHON_VERSION=<your\_python\_version> \
-  -DCMAKE_INSTALL_PREFIX=./install
-
+conda install -r <gtsam\_folder>/python/requirements.txt
+cmake .. -DGTSAM_BUILD_PYTHON=1 -DGTSAM_PYTHON_VERSION=<your\_python\_version>
 make python-install
+\end{lstlisting}
+
 
 
 For Python wrapper, you can do it in two ways:
 
 \begin{enumerate}
-    \item Using pip to install: \texttt{pip install gtsam}
+    \item Using pip to install: \lstinline[style=bash]{pip install gtsam}
     \item Build from source. Follow the instructions here to install. Below are some guides on how to install the Python wrapper.
     \begin{itemize}
-        \item After you successfully clone the repository and create the build folder, you'll have to first go into the cython folder and install the required dependencies. \texttt{pip install -r <gtsam\_folder>/python/requirements.txt}
-        \item Then you'll have to do cmake differently by specifying the the Python version you want to use and enable Python wrapper: \texttt{cmake .. -DGTSAM\_BUILD\_PYTHON=1 -DGTSAM\_PYTHON\_VERSION=<your\_python\_version>}
-        \item Compile the files in build (-j means using multi-thread. 10 is the number of threads you want to use) \texttt{make -j10}
-        \item Install it to your machine \texttt{sudo make python-install}
+        \item After you successfully clone the repository and create the build folder, you'll have to first go into the cython folder and install the required dependencies. \lstinline[style=bash]{pip install -r <gtsam\_folder>/python/requirements.txt}
+        \item Then you'll have to do cmake differently by specifying the the Python version you want to use and enable Python wrapper: \lstinline[style=bash]{cmake .. -DGTSAM\_BUILD\_PYTHON=1 -DGTSAM\_PYTHON\_VERSION=<your\_python\_version>}
+        \item Compile the files in build (-j means using multi-thread. 10 is the number of threads you want to use) \lstinline[style=bash]{make -j10}
+        \item Install it to your machine \lstinline[style=bash]{sudo make python-install}
     \end{itemize}
 \end{enumerate}
 
@@ -168,7 +167,7 @@ You may refer to some python gtsam examples here.
 \subsection{A. (10 pts)}
 Write a function to read 2D Intel dataset from G2O format and output poses and edges. These poses and edges are used in later problems. It can be any form you like as long as you can use it to generate the correct result.
 
-For 2D data, the pose in G2O format is \texttt{[VERTEX\_SE2 i x y theta]} and the edge in G2O format is \texttt{[EDGE\_SE2 i j x y theta info(x, y, theta)]}, where \texttt{info(x, y, theta)} is a $1 \times 6$ vector \texttt{[q11 q12 q13 q22 q23 q33]} where the elements are the upper-triangle matrix of the $3 \times 3$ information matrix $\Omega = \begin{bmatrix} q_{11} & q_{12} & q_{13} \\ q_{12} & q_{22} & q_{23} \\ q_{13} & q_{23} & q_{33} \end{bmatrix}$.
+For 2D data, the pose in G2O format is \lstinline[style=bash]{[VERTEX\_SE2 i x y theta]} and the edge in G2O format is \lstinline[style=bash]{[EDGE\_SE2 i j x y theta info(x, y, theta)]}, where \lstinline[style=bash]{info(x, y, theta)} is a $1 \times 6$ vector \lstinline[style=bash]{[q11 q12 q13 q22 q23 q33]} where the elements are the upper-triangle matrix of the $3 \times 3$ information matrix $\Omega = \begin{bmatrix} q_{11} & q_{12} & q_{13} \\ q_{12} & q_{22} & q_{23} \\ q_{13} & q_{23} & q_{33} \end{bmatrix}$.
 
 By inverting this information matrix, you can obtain the covariance matrix for the noise model.
 
@@ -176,14 +175,14 @@ You may look into detail in the g2o repository\footnote{\url{https://github.com/
 
 \textbf{Remark 5.} \textit{If you use readG2o() and load2D() functions provided by GTSAM, then you will not be able to solve the graph incrementally (task C in this homework).}
 
-\textbf{Hint:} You may use \texttt{fscanf()}, \texttt{textscan()}, or \texttt{readcell()} functions with proper formatSpec from MATLAB and check if the first element in the input is \texttt{VERTEX\_SE2} or \texttt{EDGE\_SE2}.
+\textbf{Hint:} You may use \lstinline[style=bash]{fscanf()}, \lstinline[style=bash]{textscan()}, or \lstinline[style=bash]{readcell()} functions with proper formatSpec from MATLAB and check if the first element in the input is \lstinline[style=bash]{VERTEX\_SE2} or \lstinline[style=bash]{EDGE\_SE2}.
 
 \subsection{B. (20 pts) Batch Solution}
-A batch solution means when we construct the entire graph and solve it at the end altogether. Load \texttt{data/input\_INTEL\_g2o.g2o} and construct a 2D nonlinear factor graph using GTSAM. Use the Gauss-Newton solver. Visualize and compare the optimized trajectory against the initial trajectory. Include the plot in your pdf. Describe the graph construction process and its parameters.
+A batch solution means when we construct the entire graph and solve it at the end altogether. Load \lstinline[style=bash]{data/input\_INTEL\_g2o.g2o} and construct a 2D nonlinear factor graph using GTSAM. Use the Gauss-Newton solver. Visualize and compare the optimized trajectory against the initial trajectory. Include the plot in your pdf. Describe the graph construction process and its parameters.
 
 \textbf{Remark 6.} \textit{For this problem, Gauss Newton solver will fall into a local minimum if we don't give any perturbation. It is okay to submit a plot that doesn't work as expected, but please include discussions about why is this happening.}
 
-\textbf{Hint:} You may use \texttt{NonLinearFactorGraph} as your graph, use \texttt{GaussNewtonOptimizer} as you optimizer, use \texttt{Values} for your initial estimation, \texttt{noiseModel.Gaussian.Covariance()} for your noise model, \texttt{graph.add()} and \texttt{initial.insert()} functions as you see fit. However, function names might be different for different versions of gtsam.
+\textbf{Hint:} You may use \lstinline[style=bash]{NonLinearFactorGraph} as your graph, use \lstinline[style=bash]{GaussNewtonOptimizer} as you optimizer, use \lstinline[style=bash]{Values} for your initial estimation, \lstinline[style=bash]{noiseModel.Gaussian.Covariance()} for your noise model, \lstinline[style=bash]{graph.add()} and \lstinline[style=bash]{initial.insert()} functions as you see fit. However, function names might be different for different versions of gtsam.
 
 \subsection{C. (20 pts) Incremental Solution}
 Use ISAM2 solver to optimize the trajectory incrementally (as you build the graph gradually). A detailed algorithms is described in Algorithm 1. Visualize and compare the optimized trajectory against the initial trajectory. Include the plot in your pdf. Describe the graph construction process and its parameters.
@@ -216,18 +215,18 @@ Use ISAM2 solver to optimize the trajectory incrementally (as you build the grap
 \EndFor
 \end{algorithmic}
 
-You may use \texttt{NonLinearFactorGraph} as your graph, use \texttt{gtsam.ISAM2()} as your update algorithm, use \texttt{Values} for your initial estimation, and use \texttt{graph.add()}, \texttt{initial.insert()}, \texttt{isam.update()}, and \texttt{isam.calculateEstimate()} functions as you see fit. However, function names might be different for different versions of gtsam.
+You may use \lstinline[style=bash]{NonLinearFactorGraph} as your graph, use \lstinline[style=bash]{gtsam.ISAM2()} as your update algorithm, use \lstinline[style=bash]{Values} for your initial estimation, and use \lstinline[style=bash]{graph.add()}, \lstinline[style=bash]{initial.insert()}, \lstinline[style=bash]{isam.update()}, and \lstinline[style=bash]{isam.calculateEstimate()} functions as you see fit. However, function names might be different for different versions of gtsam.
 
 \section{3D Graph SLAM (50 points)}
 \subsection{A. (10 pts)}
 Write a function to read 3D Garage G2O file from G2O format and output poses and edges.
 
-For 3D data, the pose in G2O format is \texttt{[VERTEX\_SE3:QUAT i x y z qx qy qz qw]} where $(x,y,z)$ represents the translation and $(qx,qy,qz,qw)$ the rotation as a quaternion. The edge in G2O format is \texttt{[EDGE\_SE3:QUAT i j x y z qx qy qz qw info(x, y, z, qx, qy, qz)]}, where \texttt{info(x, y, z, qx, qy, qz)} is a $1 \times 21$ vector of the $6 \times 6$ information matrix. After similar process in task 1 A, you can obtain the covariance matrix. You may look into detail in the g2o repository\footnote{\url{https://github.com/RainerKuenmerle/g2o/wiki/File-Format-SLAM-3D}}.
+For 3D data, the pose in G2O format is \lstinline[style=bash]{[VERTEX\_SE3:QUAT i x y z qx qy qz qw]} where $(x,y,z)$ represents the translation and $(qx,qy,qz,qw)$ the rotation as a quaternion. The edge in G2O format is \lstinline[style=bash]{[EDGE\_SE3:QUAT i j x y z qx qy qz qw info(x, y, z, qx, qy, qz)]}, where \lstinline[style=bash]{info(x, y, z, qx, qy, qz)} is a $1 \times 21$ vector of the $6 \times 6$ information matrix. After similar process in task 1 A, you can obtain the covariance matrix. You may look into detail in the g2o repository\footnote{\url{https://github.com/RainerKuenmerle/g2o/wiki/File-Format-SLAM-3D}}.
 
-\textbf{Remark 7.} \textit{Please notice that the quaternion in MATLAB is in the order of [qw qx qy qz] and is different from the order in g2o files which is [qx qy qz qw]. You may use \texttt{quat2rotm()} function in matlab to construct a rotation matrix from quaternion or use \texttt{quat2tform()} function in matlab to construct a transformation matrix.}
+\textbf{Remark 7.} \textit{Please notice that the quaternion in MATLAB is in the order of [qw qx qy qz] and is different from the order in g2o files which is [qx qy qz qw]. You may use \lstinline[style=bash]{quat2rotm()} function in matlab to construct a rotation matrix from quaternion or use \lstinline[style=bash]{quat2tform()} function in matlab to construct a transformation matrix.}
 
 \subsection{B. (20 pts) Batch Solution}
-Load \texttt{data/parking-garage.g2o} and construct a 3D nonlinear factor graph using GTSAM. Use the Gauss-Newton solver. Visualize and compare the optimized trajectory against the initial trajectory. Include a 3D plot or two 2D plots in your pdf. Describe the graph construction process and its parameters.
+Load \lstinline[style=bash]{data/parking-garage.g2o} and construct a 3D nonlinear factor graph using GTSAM. Use the Gauss-Newton solver. Visualize and compare the optimized trajectory against the initial trajectory. Include a 3D plot or two 2D plots in your pdf. Describe the graph construction process and its parameters.
 
 \subsection{C. (20 pts) Incremental Solution}
 Use ISAM2 solver to optimize the trajectory incrementally. Visualize and compare the optimized trajectory against the initial trajectory. Include a 3D plot or two 2D plots in your pdf. Describe the graph construction process and its parameters.
