--- a/tps/tp6_ekf_slam_rrt/tp.tex
+++ b/tps/tp6_ekf_slam_rrt/tp.tex
@@ -45,7 +45,7 @@ This assignment may be handed in up to 5 days late (Tuesday May 19th @ 11:59pm),
     \label{fig:odometry-base-motion-model}
 \end{figure}
 
-\subsubsection{Motion Model Jacobian [5 points]}
+\subsubsection{Motion Model Jacobian}
 We will reuse the odometry motion model from HW1 (see Figure \ref{fig:odometry-base-motion-model} and Sec. 5.4 in the book \cite{thrun2005probabilistic}). The state of the robot is its 2D position and orientation: $s_{t}=[x_{t},y_{t},\theta_{t}]$. The control to the robot is $u_{t}=[\delta_{rot1},\delta_{trans},\delta_{rot2}]$, i.e. the robot rotates by $\delta_{rot1}$, drives straight forward $\delta_{trans}$, then rotates again by $\delta_{rot2}$.
 
 The equations for the motion model $s_{t}=g(u_{t},s_{t-1})$ are as follows:
@@ -74,7 +74,7 @@ V=\begin{pmatrix}
 \end{pmatrix}
 \]
 
-\subsubsection{Observation Model Jacobian [5 points]}
+\subsubsection{Observation Model Jacobian}
 Assume there is a landmark $m$ at location $(x_{m},y_{m})$. The robot receives two measurements of the bearing angle $\phi$ and the landmark, the range $r$, where
 
 \begin{align*}
@@ -84,7 +84,7 @@ Assume there is a landmark $m$ at location $(x_{m},y_{m})$. The robot receives t
 
 Derive Jacobian matrix $H_{s}$, derivative of the measurements with respect to the robot state $s_{t}=[x_{t},y_{t},\theta_{t}]$ and the Jacobian matrix $H_{m}$, derivative of the measurements with respect to the landmark position $(x_{m},y_{m})$.
 
-\subsection{EKF Localization and Mapping [40 points]}
+\subsection{EKF Localization and Mapping}
 In the programming component of this assignment, you will first implement an Extended Kalman Filter (EKF) (Algorithm~\ref{alg:ekf}) to localize a robot based on landmarks. Then, you will add landmarks to the state and build a map while localizing the robot, thus performing simultaneous localization and mapping (SLAM).
 
 \begin{algorithm}\captionsetup{labelfont={sc,bf}, labelsep=newline}
@@ -163,7 +163,7 @@ In this part, you are provided with a robot arm that has 2 links is able to move
 \subsection{Code Overview}
 The starter code for RRT is under the \texttt{rrt} folder. Here is a brief overview.
 
-\subsection{RRT Implementation [50 points]}
+\subsection{RRT Implementation}
 Implement a RRT planner for the 2D robot in \texttt{RRTPlanner.py} by filling in \texttt{Plan} and \texttt{extend} functions. Your results from a successful RRT implementation should be comparable to the following results:
 
 \begin{verbatim}
